<resources>
    <string name="app_name">Test &amp; Assignment Randomizer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_tests">Tests</string>
    <string name="menu_templates">Templates</string>
    <string name="menu_download">Download</string>
    <string name="menu_account">Account</string>
    <string name="menu_settings">Settings</string>
</resources>