<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_tests"
            android:title="@string/menu_tests" />
        <item
            android:id="@+id/nav_templates"
            android:title="@string/menu_templates" />
        <item
            android:id="@+id/nav_download"
            android:title="@string/menu_download" />
        <item
            android:id="@+id/nav_account"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>